# tatvatrayam_ai

./: GEMINI.md  README.md  extract_all.py  pyproject.toml
output/: tt-part-1.txt  tt-part-2.txt  tt-part-3.txt
